Orders and Trades being persisted now

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marketron</title>
     <link rel="stylesheet" href="css/styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -177,6 +179,8 @@
         </footer>
     </div>
 
+    <script src="js/utils/crypto.js"></script>
+    <script src="js/services/persistenceService.js"></script>
     <script src="js/orderBook.js"></script>
     <script src="js/orderEntry.js"></script>
     <script src="js/marketData.js"></script>
