--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
+    <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
 </head>
 <body>
     <div class="container">
@@ -65,7 +66,9 @@
                 <form id="orderForm">
                     <div class="form-group">
                         <label for="symbol">Symbol:</label>
-                        <input type="text" id="symbol" required>
+                        <select id="symbol" required>
+                            <option value="" disabled selected>Select a symbol</option>
+                        </select>
                     </div>
                     
                     <div class="form-group">
@@ -113,7 +116,9 @@
                         <h3>Combo Legs</h3>
                         <div class="form-group">
                             <label for="legSymbol">Leg Symbol:</label>
-                            <input type="text" id="legSymbol">
+                            <select id="legSymbol">
+                                <option value="" disabled selected>Select a symbol</option>
+                            </select>
                         </div>
                         <div class="form-group">
                             <label for="legRatio">Ratio:</label>
@@ -179,7 +184,9 @@
     </div>
 
     <script src="js/utils/crypto.js"></script>
+    <script src="js/utils/snackbar.js"></script>
     <script src="js/services/persistenceService.js"></script>
+    <script src="js/constants/marketSymbols.js"></script>
     <script src="js/orderBook.js"></script>
     <script src="js/orderEntry.js"></script>
     <script src="js/marketData.js"></script>
