Expandable theme toggler

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                                 <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line>
                                 <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
                             </svg>
+                            <span class="mode-text">Dark Mode</span>
                         </button>
                         <a href="https://vrushankpatel.github.io" class="profile-link" target="_blank" rel="noopener noreferrer">
                             <img src="https://vrushankpatel.github.io/img/profile-pic.jpg" alt="Vrushank Patel" class="profile-pic">
