Added default values

--- a/index.html
+++ b/index.html
@@ -154,16 +154,16 @@
                         </div>
                         <div class="fix-content">
                             <div class="form-group">
-                                <label for="senderCompId">Sender Comp ID (Optional):</label>
-                                <input type="text" id="senderCompId" placeholder="Enter Sender Comp ID if needed">
+                                <label for="senderCompId">Sender Comp ID:</label>
+                                <input type="text" id="senderCompId" placeholder="CMP000001" value="CMP000001">
                             </div>
                             <div class="form-group">
-                                <label for="senderSubId">Sender Sub ID (Optional):</label>
-                                <input type="text" id="senderSubId" placeholder="Enter Sender Sub ID if needed">
+                                <label for="senderSubId">Sender Sub ID:</label>
+                                <input type="text" id="senderSubId" placeholder="SUB000001" value="SUB000001">
                             </div>
                             <div class="form-group">
-                                <label for="targetCompId">Target Comp ID (Optional):</label>
-                                <input type="text" id="targetCompId" placeholder="Enter Target Comp ID if needed">
+                                <label for="targetCompId">Target Comp ID:</label>
+                                <input type="text" id="targetCompId" placeholder="CMP000001" value="CMP000001">
                             </div>
                         </div>
                     </div>
