--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Bootstrap JS Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
+    <link rel="icon" type="image/x-icon" href="https://maxine.readthedocs.io/en/latest/img/favicon.ico">
 </head>
 <body>
     <div class="container">
@@ -46,7 +44,7 @@
                             <span class="mode-text">Dark Mode</span>
                         </button>
                         <a href="https://vrushankpatel.github.io" class="profile-link" target="_blank" rel="noopener noreferrer">
-                            <img src="https://vrushankpatel.github.io/img/profile-pic.jpg" alt="Vrushank Patel" class="profile-pic">
+                            <img src="img/android-chrome-192x192.png" alt="Vrushank Patel" class="profile-pic">
                             <span>Vrushank Patel</span>
                         </a>
                     </div>
