--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="icon" type="image/x-icon" href="https://maxine.readthedocs.io/en/latest/img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="img/logo.png">
 </head>
 <body>
     <div class="container">
         <header>
             <div class="header-content">
-                <h1>Marketron</h1>
+                <div class="logo-title">
+                    <img src="img/logo.png" alt="Marketron Logo" class="header-logo">
+                    <h1>arketron</h1>
+                </div>
                 <div class="header-controls">
                     <div class="header-right">
                         <button id="resetButton" class="reset-button" title="Reset Marketron">
