--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0">
     <title>Marketron</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/oatm.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -197,8 +198,23 @@
             </section>
 
             <section class="trades">
-                <h2>Recent Trades</h2>
+                <h2>Trade Monitor</h2>
                 <div class="trades-container" id="tradesContainer">
+                </div>
+            </section>
+
+            <section class="oatm">
+                <h2>Order Audit Trail Monitor (OATM)</h2>
+                <div class="oatm-container" id="oatmContainer">
+                    <div class="oatm-header">
+                        <div class="client-side">Client</div>
+                        <div class="marketron-side">Marketron</div>
+                    </div>
+                    <div class="oatm-timeline-wrapper">
+                        <div class="oatm-timeline" id="oatmTimeline">
+                            <!-- Timeline entries will be added here dynamically -->
+                        </div>
+                    </div>
                 </div>
             </section>
         </div>
@@ -222,6 +238,7 @@
     <script src="js/orderMatching.js"></script>
     <script src="js/themeToggle.js"></script>
     <script src="js/resetService.js"></script>
+    <script src="js/oatm.js"></script>
     <script>
         // Initialize all tooltips
         var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
