--- a/index-dev.html
+++ b/index-dev.html
@@ -12,6 +12,27 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="icon" type="image/x-icon" href="img/logo.png">
+    <style>
+        /* OATM card colors */
+        .oatm-card.buy-order,
+        .oatm-card.buy-accepted {
+            background-color: rgba(0, 255, 0, 0.1) !important;
+        }
+
+        .oatm-card.sell-order,
+        .oatm-card.sell-accepted {
+            background-color: rgba(255, 0, 0, 0.1) !important;
+        }
+
+        .oatm-card.trade {
+            background-color: rgba(0, 128, 128, 0.1) !important;
+        }
+
+        /* Increase OATM container height */
+        .oatm-container {
+            height: 600px !important;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -205,7 +226,7 @@
 
             <section class="oatm">
                 <h2>Order Audit Trail Monitor (OATM)</h2>
-                <div class="oatm-container" id="oatmContainer">
+                <div class="oatm-container" id="oatmContainer" style="height: 600px;">
                     <div class="oatm-header">
                         <div class="client-side">Client</div>
                         <div class="marketron-side">Marketron</div>
