--- a/index-dev.html
+++ b/index-dev.html
@@ -44,6 +44,13 @@
                 </div>
                 <div class="header-controls">
                     <div class="header-right">
+                        <button id="fixionaryButton" class="fixionary-button" title="Take to Fix Dictionary page" onclick="window.location.href='https://thefixionary.web.app/'">
+                            <svg class="trading-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M3 17l5-5 4 4 8-8"></path>
+                                <path d="M14 7h7v7"></path>
+                            </svg>                            
+                            <span class="simulation-text">Fixionary</span>
+                        </button>
                         <button id="simulationButton" class="simulation-button" title="Simulate Trading">
                             <svg class="simulation-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M17 8l4 4m0 0l-4 4m4-4H3"></path>
