--- a/index-dev.html
+++ b/index-dev.html
@@ -44,7 +44,7 @@
                 </div>
                 <div class="header-controls">
                     <div class="header-right">
-                        <button id="fixionaryButton" class="fixionary-button" title="Take to Fix Dictionary page" onclick="window.location.href='https://thefixionary.web.app/'">
+                        <button id="fixionaryButton" class="fixionary-button" title="Take to Fix Dictionary page">
                             <svg class="trading-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M3 17l5-5 4 4 8-8"></path>
                                 <path d="M14 7h7v7"></path>
@@ -282,5 +282,23 @@
             return new bootstrap.Tooltip(tooltipTriggerEl)
         })
     </script>
+
+    <!-- Add this modal HTML just before the closing body tag -->
+    <div class="modal fade" id="fixionaryModal" tabindex="-1" aria-labelledby="fixionaryModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-fullscreen">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="fixionaryModalLabel">The Fixionary</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body p-0">
+                    <iframe id="fixionaryFrame" src="about:blank" width="100%" height="100%" frameborder="0"></iframe>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Add this before the closing body tag, after other script tags -->
+    <script src="js/fixionaryModal.js"></script>
 </body>
 </html> 
